# monorepo

./: .gitignore  build.gradle  settings.gradle
bzl-snippets/000-simplest-rule/: BUILD.bazel  simple_rule.bzl
bzl-snippets/001-hello-world-parametrized/: BUILD.bazel  greeting_rule.bzl
bzl-snippets/002-rule-with-dependencies/: BUILD.bazel  greeting_rule.bzl
bzl-snippets/003-rule-with-executable/: BUILD.bazel  mybuild.sh
bzl-snippets/004-action-rule/: BUILD.bazel  executable.bzl  mybuild.sh
bzl-snippets/005-naive-npm/: BUILD.bazel  in.less  lessc.bzl  lessc.sh  package.json
bzl-snippets/006-binary-download/: BUILD.bazel  WORKSPACE  node.bzl  project.bzl
bzl-snippets/006-binary-download/src/: ping.js
bzl-snippets/007-repository-rule/: BUILD.bazel  defs.bzl
bzl-snippets/008-npm-install/: BUILD.bazel  WORKSPACE  defs.bzl  package.json
minimal-bazel-nodejs-example/: WORKSPACE
minimal-bazel-nodejs-example/module_a/: BUILD.bazel  index.js  package.json
minimal-bazel-nodejs-example/module_b/: BUILD.bazel  index.js  package.json
minimal-gwt-project/: WORKSPACE
minimal-kotlinjs-example/: build.gradle  compile.js  deploy.xml  package.json
minimal-kotlinjs-example/backend/: server.kt
minimal-kotlinjs-example/src/main/webapp/: index.html
minimal-typescript-bazel-project/: BUILD.bazel  WORKSPACE  package.json  run.sh  tsconfig.json  webpack.config.js
minimal-typescript-bazel-project/src/main/ts/: app.ts  ping.ts
rustecma/: Cargo.toml  package-lock.json  package.json
rustecma/src/: index.js
sovori-backend/: package.json
sovori-backend/src/main/ts/: app.ts
sovori-frontend/: build.gradle  package.json  tsconfig.json  tslint.json
sovori-frontend/src/main/less/: all.less
sovori-frontend/src/main/pug/: index.jade
sovori-frontend/src/main/ts/: Question.ts  Statistics.ts  app.ts  customDomEvent.ts  data_loader.ts  editor.ts  ping.ts  test.ts
sovori/sovori-backend/: build.gradle  package-lock.json  package.json  tsconfig.json
sovori/sovori-backend/src/main/ts/: app.ts
sovori/sovori-crossplatform/: package.json
sovori/sovori-frontend/: build.gradle  package.json  tsconfig.json  tslint.json
sovori/sovori-frontend/build-scripts/: pug-module-builder.js  pug-ts.js
sovori/sovori-frontend/src/main/less/: all.less  buttons.less  dialog.less  progress.less  question-dialog.less  record-dialog.less
sovori/sovori-frontend/src/main/pug/: courses.pug  index.jade
sovori/sovori-frontend/src/main/templates/: ping.pug
sovori/sovori-frontend/src/main/ts/: AddRecordDialog.ts  EditRecordDialog.ts  Footer.ts  LocalRouter.ts  Progress.ts  Question.ts  QuestionCheckResult.ts  QuestionDialog.ts  QuestionRecord.ts  RecordDialog.ts  State.ts  TestRecord.ts  app-courses.ts  app.ts  cursor.ts  customDomEvent.ts  data_loader.ts  editor.ts  (+3 more)
(+32 files in other folders)
