load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

filegroup(name = "node_modules", srcs = glob(["node_modules/**/*"]))
filegroup(name = "src", srcs = glob(["src/main/ts/**/*.ts"]))

nodejs_binary(
    name = "tsc",
    data = [
        "@//:node_modules",
        "@//:src",
        'tsconfig.json'
    ],
    entry_point = "typescript/bin/tsc"
)