package(default_visibility = ["//visibility:public"])

#filegroup(name = "node_modules", srcs = glob(["node_modules/**/*"]))

load("@nodejs//:defs.bzl", "nodejs_binary")
#
nodejs_binary(
    name = "bar",
    entry_point = "bin/ping",
    # Ordinarily this defaults to //:node_modules
    node_modules = "@ping//:node_modules"
)
